working with material icon

--- a/example/src/index.scss
+++ b/example/src/index.scss
@@ -1,5 +1,6 @@
 @import "~@material/react-button/index";
-
+@import '~@material/react-top-app-bar/index';
+@import '~@material/react-material-icon/index';
 body {
   margin: 0;
   padding: 0;
@@ -7,4 +8,9 @@ body {
 }
 :root {
   --mdc-theme-primary: brown
+}
+
+
+.color-teal {
+  color: teal
 }
