--- a/example/src/index.scss
+++ b/example/src/index.scss
@@ -2,7 +2,7 @@
 @import '~@material/react-top-app-bar/index';
 @import '~@material/react-material-icon/index';
 @import '~@material/react-drawer/index.scss';
-
+@import '~@material/react-switch/index.scss';
 body {
   margin: 0;
   padding: 0;
@@ -23,4 +23,21 @@ body {
 
 .color-teal {
   color: teal
+}
+
+.drawer-container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.drawer-app-content {
+  flex: auto;
+  overflow: auto;
+}
+
+.top-app-bar-fix-adjust {
+  display: flex;
+  width: 100%;
 }
